--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -10,10 +10,11 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      # Persist storage data
-      - ./storage:/var/www/html/storage
-      # Mount logs for monitoring
+      # Persist storage data (excluding fonts which are built into image)
       - ./storage/logs:/var/www/html/storage/logs
+      - ./storage/uploads:/var/www/html/storage/uploads
+      - ./storage/output:/var/www/html/storage/output
+      # Fonts are built into the image, no need to mount them
     environment:
       - APP_ENV=production
       - APP_DEBUG=false
