--- a/docker-compose.dev-windows.yml
+++ b/docker-compose.dev-windows.yml
@@ -37,4 +37,5 @@ services:
       - PDF_MAX_SIZE=10485760
       - LOG_LEVEL=debug
       - LOG_FILE=storage/logs/app.log
+      - MOCK_MODE=true
     command: php -S 0.0.0.0:8000 -t public
