--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -26,4 +26,5 @@ services:
       - LOG_LEVEL=debug
       - LOG_FILE=storage/logs/app.log
       - MOCK_MODE=true
+      - DEV_MODE=true
     command: php -S 0.0.0.0:8000 -t public
