--- a/docker-compose.windows.yml
+++ b/docker-compose.windows.yml
@@ -23,4 +23,5 @@ services:
       - PDF_MAX_SIZE=10485760
       - LOG_LEVEL=debug
       - LOG_FILE=storage/logs/app.log
+      - DEV_MODE=true
     command: php -S 0.0.0.0:8000 -t public
