--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -14,6 +14,7 @@ services:
       - ./storage/logs:/var/www/html/storage/logs
       - ./storage/uploads:/var/www/html/storage/uploads
       - ./storage/output:/var/www/html/storage/output
+      - ./storage/database:/var/www/html/storage/database
       # Fonts are built into the image, no need to mount them
     environment:
       - APP_ENV=production
