chore: revert api url

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -27,7 +27,7 @@ services:
       - DB_USERNAME=${DB_USERNAME:-root}
       - DB_PASSWORD=${DB_PASSWORD:-}
       # API configuration
-      - API_BASE_URL=${API_BASE_URL:-https://api-internal.purissima.com}
+      - API_BASE_URL=${API_BASE_URL:-https://api.purissima.com}
       - API_TIMEOUT=${API_TIMEOUT:-30}
       - API_RETRY_ATTEMPTS=${API_RETRY_ATTEMPTS:-3}
       # PDF configuration
